# n.o.b.i.i.t.r

./: .gitignore  CMakeLists.txt  README.md
.ssh/: id_ed25519
src/: CMakeLists.txt  algs.hpp  run.cpp
